--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,98 @@
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
+    <main>
+        <div>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </div>
+        <section>
+            <h2>Особенности</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="images/box-1.jpg" alt="Верстка сайта" width="370"></li>
+                <li><img src="images/box-2.jpg" alt="Создание стиля" width="370"></li>
+                <li><img src="images/box-3.jpg" alt="Выбор цветовой палитры" width="370"></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Наша Команда</h2>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="images/igor.jpg" alt="фото Игоря Демьяненко" width="270">
+                        <figcaption>
+                            <h3>Игорь Демьяненко</h3>
+                            <p>Product Designer</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/olga.jpg" alt="фото Ольги Репиной" width="270">
+                        <figcaption>
+                            <h3>Ольга Репина</h3>
+                            <p>Frontend Developer</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/nikola.jpg" alt="фото Николая Тарасова" width="270">
+                        <figcaption>
+                            <h3>Николай Тарасов</h3>
+                            <p>Marketing</p>
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="images/michael.jpg" alt="фото Михаила Ермакова" width="270">
+                        <figcaption>
+                            <h3>Михаил Ермаков</h3>
+                            <p>UI Designer</p>
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
+
+    </main>
+
+    <footer>
+        <a href="">WebStudio</a>
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <ul>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
