--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </ul>
     </header>
     <main>
-        <div>
+        <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
-        </div>
+        </section>
         <section>
             <h2>Особенности</h2>
             <ul>
@@ -61,40 +61,24 @@
             <h2>Наша Команда</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="images/igor.jpg" alt="фото Игоря Демьяненко" width="270">
-                        <figcaption>
-                            <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="images/igor.jpg" alt="фото Игоря Демьяненко" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="images/olga.jpg" alt="фото Ольги Репиной" width="270">
-                        <figcaption>
-                            <h3>Ольга Репина</h3>
-                            <p>Frontend Developer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="images/olga.jpg" alt="фото Ольги Репиной" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="images/nikola.jpg" alt="фото Николая Тарасова" width="270">
-                        <figcaption>
-                            <h3>Николай Тарасов</h3>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
+                    <img src="images/nikola.jpg" alt="фото Николая Тарасова" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="images/michael.jpg" alt="фото Михаила Ермакова" width="270">
-                        <figcaption>
-                            <h3>Михаил Ермаков</h3>
-                            <p>UI Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="images/michael.jpg" alt="фото Михаила Ермакова" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
